--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ crashlytics-build.properties
 
 # Packed Addressables
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
-/[Ll]ibrary/[Pp]ackage[Cc]ache/com.unity.burst*/.Runtime/hostmac/*
+/[Ll]ibrary/[Pp]ackage[Cc]ache/*
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
