--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
+/Library/
+/Temp/
+/obj/
 /[Bb]uild/
 /[Bb]uilds/
-/[Ll]ogs/
+/Logs/
 /[Uu]ser[Ss]ettings/
  
 # MemoryCaptures can get excessive in size.
